# fmi

./: README.md
AN1/AG - Popescu Stefan/: README.md
AN1/ALGEBRA1 - Bulacu Daniel/: README.md
AN1/ALGEBRA2 - Gica Alexandru/: README.md  pastele.cpp
AN1/ANALIZA1 - Mihail Alexandru/: README.md
AN1/ANALIZA2 - Mihail Alexandru/: README.md
AN1/ASC - Dragulci Dumitru/: README.md
AN1/ASD - Ceterchi Rodica/: README.md
AN1/GEOMETRIE - Hirica Iulia/: README.md
AN1/LFA - Mitrana Victor/: README.md
AN1/LMC - Claudia Muresan/: README.md
AN1/POO - Paun Andrei/: README.md
AN1/PP - Boriga Radu/: README.md
AN2/BD - Marin Letitia/: README.md  Subiect 1.txt  Subiect 2.txt  Subiect 3.txt  Subiect 4.txt
AN2/CC - Mitrana Victor/: README.md
AN2/ENGLEZA - Ionita Diana/: 1. Formal letter of aplication.docx  2. Formal letter of complaint.docx  3. Informal letter of giving news.docx  4. Informal letter of accepting an invitation.docx  5. My portrait.docx  6. Description of a place.docx  README.md
AN2/GC - Stupariu Sorin/: README.md
AN2/GC - Stupariu Sorin/lab/proiect2_reprezentare_grafica/: CMakeLists.txt  README.md  actual_program.cpp  actual_program.h  algqueue.cpp  algqueue.h  camera.cpp  camera.h  circle.cpp  circle.h  engine.cpp  engine.h  font.cpp  font.h  input.txt  main.cpp  point.cpp  point.h  triangle.cpp  triangle.h
AN2/IA - Florentina Hristea/: README.md
AN2/MDS - Stefanescu Alin/: README.md
AN2/PAO - Dascalescu Cristina/: README.md
AN2/PL - Diaconescu Denisa/: README.md
AN2/PS - Amarioarei Alexandru/: README.md
AN2/TAP - Banu Iulia/: README.md
(+417 files in other folders)
